<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/logs_action_refresh"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/ic_copy"
        android:title="@string/logs_action_copy"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/logs_action_share"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_clear"
        android:title="@string/logs_action_clear"
        app:showAsAction="never"/>

</menu>
